syntax = "proto2";

package kotlinx.serialization.protobuf.schema.generator;

// serial name 'kotlinx.serialization.protobuf.schema.GenerationTest.ContextualHolder'
message ContextualHolder {
  // contextual message type
  required bytes value = 1;
}
