syntax = "proto2";

package kotlinx.serialization.protobuf.schema.generator;

// serial name 'kotlinx.serialization.protobuf.schema.GenerationTest.OptionalClass'
message OptionalClass {
  required int32 requiredInt = 1;
  // WARNING: field has a default value that is not present in the schema
  optional int32 optionalInt = 2;
  required int32 nullableInt = 3;
  // WARNING: field has a default value that is not present in the schema
  optional int32 nullableOptionalInt = 4;
}
